@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0b9
 
+	- Fl::scheme() didn't update windows that were not
+	  shown.
 	- The fractals demo would get far ahead of the UI with
 	  some Linux OpenGL drivers.  Now use glFinish() instead
 	  of glFlush() so we are at most 1 frame ahead.
